# furqan-lint

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PHASE_G11_1_CARRY_FORWARD.md  README.md  SAFETY_INVARIANTS.md  SECURITY.md  action.yml  pyproject.toml  setup.py
.github/workflows/: ci.yml  release.yml
demo/: README.md  api_v1.py  api_v2.py
docs/: g11.0.6-preflight.md  g11.2-preflight.md  g11.3-preflight.md  gate11-self-attestation.md  gate11-symmetry.md  gate11-v1-self-attestation.md  onnx-attestation-boundary.md  release-checklist.md  sandbox-ci-parity.md
scripts/: backfill_github_releases.py  extract_changelog_section.py  publish.sh  regenerate_check_table.py  release_sweep.py  verify_origin_tags.py
src/furqan_lint/: __init__.py  adapter.py  additive.py  cli.py  return_none.py  runner.py  zero_return.py
src/furqan_lint.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/furqan_lint/gate11/: __init__.py  _pinned_checker_sources_self.py  bundle.py  checker_set_hash.py  cli.py  go_signature_canonicalization.py  go_verification.py  manifest_schema.py  module_canonicalization.py  onnx_signature_canonicalization.py  onnx_verification.py  python_verification.py  rust_manifest.py  rust_signature_canonicalization.py  rust_surface_extraction.py  rust_verification.py  self_manifest.py  signature_canonicalization.py  signing.py  surface_extraction.py  verification.py
src/furqan_lint/go_adapter/: __init__.py  _build.py  _exceptions.py  parser.py  public_names.py  runner.py  translator.py
src/furqan_lint/onnx_adapter/: __init__.py  numpy_divergence.py  numpy_reference.py  parser.py  probe_grid.py  public_names.py  runner.py  score_validity.py  shape_coverage.py  translator.py
src/furqan_lint/rust_adapter/: __init__.py  edition.py  parser.py  public_names.py  runner.py  translator.py
tests/: conftest.py  test_action.py  test_adapter.py  test_additive.py  test_backfill_dry_run.py  test_changelog_math_gate.py  test_checks.py  test_ci_workflow.py  test_cli_diagnostic_printer_gate.py  test_cli_diff_dispatcher.py  test_compare_name_sets.py  test_correctness.py  test_documented_limits.py  test_extract_changelog_section.py  test_extras_matrix_gate.py  test_four_place_completeness_gate.py  test_gate11_bundle.py  test_gate11_checker_set_hash_v0_11_8_pinning.py  test_gate11_checker_set_hash_v0_12_0_pinning.py  test_gate11_checker_set_hash_v0_13_0_pinning.py  test_gate11_cli.py  test_gate11_cross_substrate_corpus.py  test_gate11_cross_substrate_drift_detection.py  test_gate11_cross_substrate_fixture_parity.py  test_gate11_cross_substrate_onnx_asymmetry.py  test_gate11_dispatch_f22_corrective.py  test_gate11_go_verification.py  test_gate11_manifest_schema.py  test_gate11_module_canonicalization.py  test_gate11_onnx_limits.py  test_gate11_onnx_smoke_test_fixture_inventory.py  test_gate11_onnx_verification.py  test_gate11_python_verification.py  test_gate11_rust_cli.py  test_gate11_rust_documented_limits.py  test_gate11_rust_manifest.py  test_gate11_rust_signature_canonicalization.py  test_gate11_rust_surface_extraction.py  test_gate11_rust_verification.py  test_gate11_self_manifest.py  (+68 more)
tests/fixtures/additive/: no_all_v1.py  no_all_v2_breaking.py  v1_api.py  v2_api_breaking.py  v2_api_clean.py
tests/fixtures/changelog/: v0_11_2_entry.md
tests/fixtures/clean/: abstractmethod_decorated.py  closure_no_false_positive.py  decorator_no_false_positive.py  if_else_both_return.py  none_return_type.py  optional_propagated.py  optional_return_none.py  overload_decorated.py  raise_only_function.py  while_true_no_break.py  zero_return_none_annotated.py  zero_return_optional_annotated.py  zero_return_pipe_none.py  zero_return_unannotated.py
tests/fixtures/documented_limits/: README.md  aliased_abstractmethod.py  aliased_optional_import.py  aliased_union_import.py  local_class_in_function.py  redundant_pipe_none.py  try_body_no_exception_modeling.py  try_body_only_returns_in_block.py  zero_return_function.py
tests/fixtures/failing/: bare_return_mismatch.py  missing_return_path.py  multiple_collapses.py  nested_missing_return.py  return_none_mismatch.py  status_collapse.py  zero_return_async.py  zero_return_function.py  zero_return_method.py  zero_return_optional_propagation.py  zero_return_with_branches.py
tests/fixtures/gate11/: go_smoke_module.go  self_manifest_smoke_v1_0.bundle  self_manifest_smoke_v1_0.json
tests/fixtures/gate11/cross_substrate/: _build.py
tests/fixtures/gate11_rust/documented_limits/: README.md  impl_methods_omitted_from_surface.rs  lifetime_stripped_from_signature.rs  macro_call_signed_pre_expansion.rs  pub_crate_excluded.rs  trait_object_literal_text.rs
tests/fixtures/gate11_rust/nested_generic_pinning/: box_dyn_with_lifetime.rs  hashmap_with_option.rs  option_of_slice.rs  triple_nested.rs  vec_of_result.rs
tests/fixtures/go/clean/: all_paths_return.go  error_handled_via_named_return.go  error_propagated.go
tests/fixtures/go/diff/: api_v1.go  api_v2_clean.go  api_v2_failing.go
tests/fixtures/go/documented_limits/: README.md  defer_statement_opaque.go  for_statement_opaque.go  generic_type_parameters.go  interface_method_dispatch.go  method_conflation_v1.go  method_conflation_v2.go  multi_return_three_or_more.go  r3_compile_rejected.go  select_statement_opaque.go  switch_statement_opaque.go  two_element_non_error_tuple.go
tests/fixtures/go/failing/: error_collapse_via_blank.go  error_collapse_via_panic.go  missing_return.go
tests/fixtures/onnx/: builders.py
tests/fixtures/onnx/documented_limits/: README.md  dynamic_shape_silent_pass.py  intermediates_excluded.py  numpy_divergence_neurogolf_convention.py  registry_pin_window.py  score_validity_optin_extra.py  shape_coverage_deferred.py
tests/fixtures/onnx/numpy_reference_examples/: onehot_input_example_build.py  raw_grid_input_example_build.py
tests/fixtures/rust/clean/: async_fn_returns_result.rs  fn_in_mod_block.rs  if_else_both_return.rs  implicit_return_block.rs  match_all_arms_return.rs  (+6 more)
(+45 files in other folders)
