[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "furqan-lint"
version = "0.8.3"
description = "Structural-honesty checks for Python, powered by Furqan"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
    { name = "Bilal Syed Arfeen" },
    { name = "Fraz Ashraf" },
]
dependencies = [
    "furqan>=0.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "pytest-cov>=5.0",
    "ruff==0.8.0",
    "mypy>=1.13",
    "pre-commit>=4.0",
    "pyyaml>=6.0",
]
# Optional Rust adapter (Phase 1: D24 + D11 on .rs files).
# pip install furqan-lint[rust]. Pinned to a single major-zero
# range on both packages because the tree-sitter Python bindings
# broke between 0.20 and 0.21; we are not getting bitten by a
# similar break across our own minor releases.
rust = [
    "tree-sitter>=0.23,<1",
    "tree-sitter-rust>=0.23,<1",
]
# Optional Go adapter (Phase 1: D24 + D11 on .go files).
# pip install furqan-lint[go]. The Go toolchain (1.21+) is
# required at install time (PEP 517 build hook in setup.py
# compiles the goast binary); not at runtime. Marker-only extra:
# no PyPI dependencies; Python-side adapter ships in the wheel.
go = []

[project.scripts]
furqan-lint = "furqan_lint.cli:main"

[project.urls]
Homepage = "https://github.com/BayyinahEnterprise/furqan-lint"
Repository = "https://github.com/BayyinahEnterprise/furqan-lint"
Documentation = "https://tryfurqan.com"
Issues = "https://github.com/BayyinahEnterprise/furqan-lint/issues"

[tool.setuptools.package-data]
furqan_lint = ["go_adapter/bin/goast", "go_adapter/cmd/goast/main.go", "go_adapter/cmd/goast/go.mod"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "network: requires network access",
    "slow: takes several seconds",
    "unit: fast, in-process, no subprocess",
    "integration: spawns subprocess or invokes CLI end-to-end",
    "mock: uses unittest.mock or pytest-mock",
]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
# Curated, not maximal. Add rules deliberately.
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "B",     # flake8-bugbear
    "UP",    # pyupgrade
    "SIM",   # flake8-simplify
    "RUF",   # ruff-specific
    "PL",    # pylint subset
    "PTH",   # use pathlib
    "TID",   # tidy imports (catches mid-file imports)
]
ignore = [
    "E501",    # line length handled by formatter
    "PLR2004", # magic numbers (fine in tests/fixtures)
    "PLR0913", # too many args (pre-existing API surface)
    "PLR0911", # too many returns (pre-existing API surface)
    "PLR0912", # too many branches (pre-existing API surface)
    "PLW1510", # subprocess.run without check=True - we inspect returncode ourselves; check=True would defeat the pattern
]

[tool.ruff.lint.per-file-ignores]
# CLI does lazy imports inside subcommand handlers so `--help` and
# `version` invocations don't pay the cost of importing furqan +
# adapter + runner. The pattern is deliberate; pre-v0.5.0 it was
# noted in the docstring.
"src/furqan_lint/cli.py" = ["PLC0415"]
# rust_adapter __init__.py lazy-imports tree_sitter inside parse_file
# so the broader furqan_lint package remains importable on installs
# without the [rust] extra. Mirror the cli.py exception.
"src/furqan_lint/rust_adapter/__init__.py" = ["PLC0415"]
"src/furqan_lint/rust_adapter/parser.py" = ["PLC0415"]
"src/furqan_lint/rust_adapter/translator.py" = ["PLC0415"]
# Tests get extra slack on:
# - PLR (pylint refactor suggestions: many-args, many-branches, etc.)
# - B011 (assert False - we use this in unreachable test branches)
# - TID252 (relative imports - tests can import from sibling test modules)
# - PLC0415 (mid-function imports - tests sometimes lazy-import for isolation)
# - SIM102 (collapsible-if - test code can be more verbose for readability)
"tests/**" = ["PLR", "B011", "TID252", "PLC0415", "SIM102"]
# Fixtures are SUT (System Under Test for furqan-lint), not SUI
# (System Under Inspection). They are intentionally malformed
# Python; running ruff on them defeats the point.
"tests/fixtures/**" = ["F", "E", "B", "RUF", "PL", "UP", "SIM"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src/furqan_lint"]
exclude = ["tests/", "build/", "dist/"]

[[tool.mypy.overrides]]
module = "furqan.*"
# furqan upstream is not type-stub-complete yet; relax.
ignore_missing_imports = true

[[tool.mypy.overrides]]
# tree-sitter and tree-sitter-rust ship without inline type hints
# at the resolution our [rust] extra pins; mypy --strict needs the
# imports relaxed. The Rust adapter wraps both packages in a thin
# typed surface (parser._get_parser, translator.translate_tree)
# so the rest of the source remains strictly typed.
module = ["tree_sitter", "tree_sitter_rust"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# tomli is the Python 3.10 fallback for the stdlib tomllib; on a
# clean install of [dev] without tomli pre-installed (e.g., a fresh
# venv on Python 3.10), mypy --strict cannot find stubs for it and
# fails the strict gate. Suppress the missing-stubs check; the
# import itself is type-safe (we only call _tomllib.load(handle)
# and _tomllib.TOMLDecodeError, both well-typed at runtime).
module = "tomli"
ignore_missing_imports = true

[tool.coverage.run]
branch = true
source = ["src/furqan_lint"]
omit = ["src/furqan_lint/__main__.py"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "raise NotImplementedError"]
